Allow resource links to wrap, fix page date time styling.

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1032,6 +1032,10 @@ header ul.navigation {
   margin: 0 15px;
 }
 
+.page .block-pageDateTime .property {
+  border-bottom: 0;
+}
+
 .preview-block .resource-list {
   list-style: none;
   margin: 30px 0;
@@ -1187,6 +1191,7 @@ body:not([class]) .page-content .wrapper {
 .resource-link {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 .resource-link img {
   width: 45px;
